--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -13,7 +13,6 @@
 \usepackage{pdflscape}
 %\usepackage[comma,authoryear]{natbib}
 \usepackage{hyperref}
-\usepackage{pdfpages}
 \usepackage[nonumberlist]{glossaries}
 %\usepackage[alf]{abntcite}
 \bibliographystyle{apalike}
@@ -95,27 +94,43 @@
 \chapter{Introdução}
 \label{Cap:intro}
 
+\indent \indent O estudo de objetos como TNOs, Centauros e Satélites Irregulares (remanescentes relativamente inalterados da formação do sistema solar) nos ajudam a compreender a formação e evolução do Sistema Solar. Atualmente, é aceito que TNOs e Centauros tenham sido formados nas partes mais internas do sistema solar. Eles teriam então sido colocados em suas posições atuais devido a troca de momento angular entre os planetas e planetésimos quando da migração dos planetas gigantes. A evolução se deu de tal forma que a passagem dos planetesimais e planetas por zonas de ressonância de movimento médio redefiniu as órbitas desses corpos \cite{Tsiganis2005}.\\
+\indent Sabe-se que poucas sondas espaciais foram enviados para estudar o Sistema Solar Externo e que a quantidade de objetos estudados é muito pequena. Por isso, ainda hoje, as observações de solo tem se mostrado de grande importância.\\
+\indent Os sistemas de Júpiter e Saturno já foram pelas Voyager I e II, Galileu (Júpiter) e Cassini (Saturno), porém apenas Saturno continua sendo investigado por uma sonda. Porém as sondas observaram apenas os planetas, os anéis e satélites mais internos. Os satélites externos, que acredita-se ser oriundo de capturas ou foram pouco observados (como Phoebe) ou simplesmente não foram observados.\\
+\indent Já no caso de Urano e Netuno, nenhuma sonda exclusiva foi enviada, apenas as Voyagers I e II os visitaram, mas não permaneceram nos sistemas. A sonda New Horizons visitará Plutão em 2015 e obterá parâmetros físicos para Plutão e seus satélites (primeira visita por sonda a um satélite do cinturão de Kuiper), porém será uma passagem rápida e o acompanhamento da evolução do sistema, incluindo a evolução da atmosfera de Plutão se dará por observações de solo.\\
+\indent A quantidade de objetos descobertos além da órbita de Saturno tem aumentado muito desde o fim do século passado. Como são raras as oportunidades em que uma sonda se aproxima desses objetos, a obtenção de suas características físicas ficam a cargo de observações de solo ou de
+telescópios espaciais.\\
+\indent Um método que tem se mostrado eficiente para a obtenção desses parâmetros é o métodode ocultações estelares, que proporciona medidas tão precisas que são apenas superadas por
+medidas oriundas de sondas.
 
-\chapter{Observações}
-\label{Cap:observacoes}
+\chapter{Ocultações}
+\label{Cap: observacoes}
+
+\section{TNOs}
+\label{Sec: TNOs}
+
+\section{Ceres}
+\label{Sec: Ceres}
+
+\section{Satélites Irregulares}
+\label{Sec: Irregulares}
+
+\chapter{Astrometria de Netuno e Tritão}
+\label{Cap: Netuno}
 
 
-\chapter{Tratamento de Imagens. Obtenção de Posições ($\alpha$,$ \delta$)}
-\label{Cap:reducao}
-
-
-\chapter{Resultados}
-\label{Cap:resultados}
-
-
-
-\chapter{Discussão}%graf anom. verdad. e ceu(ind,media por noite)
-%discussão sobre provável contribuição para melhorar elementos orbitais
-\label{Cap:Analise}
-
-
-\chapter{Conclusões}
-\label{Cap:Conclusao}
+%\chapter{Resultados}
+%\label{Cap:resultados}
+%
+%
+%
+%\chapter{Discussão}%graf anom. verdad. e ceu(ind,media por noite)
+%%discussão sobre provável contribuição para melhorar elementos orbitais
+%\label{Cap:Analise}
+%
+%
+%\chapter{Conclusões}
+%\label{Cap:Conclusao}
 
 
 
