Adicionado figuras de Ceres

--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -124,14 +124,17 @@ pages = {1962-1976},
 month = {May},
 }
 
-@Article{Tsiganis2005,
-author = {K. Tsiganis and R. Gomes and A. Morbidelli1 and H. F. Levison},
-title = {Origin of the orbital architecture of the giant planets of the Solar System},
-journal = {Nature},
-year = {2005},
-volume = {435},
-number = {26},
-pages = {459-461},
+@Article{Tsiganis2005, 
+title={Origin of the orbital architecture of the giant planets of the Solar System},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03539}, DOI={10.1038/nature03539},
+number={7041},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Tsiganis, K. and Gomes, R. and Morbidelli, A. and Levison, H. F.},
+year={2005},
+month={May},
+pages={459–461}
 }
 
 @Article{Gomes2005,
