--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -10,8 +10,9 @@
 \usepackage{float}
 \usepackage{longtable}
 \usepackage{color}
+\usepackage{epstopdf}
 \usepackage{pdflscape}
-%\usepackage[comma,authoryear]{natbib}
+\usepackage[comma,authoryear]{natbib}
 \usepackage{hyperref}
 \usepackage[nonumberlist]{glossaries}
 %\usepackage[alf]{abntcite}
@@ -94,14 +95,13 @@
 \chapter{Introdução}
 \label{Cap:intro}
 
-\indent \indent O estudo de objetos como TNOs, Centauros e Satélites Irregulares (remanescentes relativamente inalterados da formação do sistema solar) nos ajudam a compreender a formação e evolução do Sistema Solar. Atualmente, é aceito que TNOs e Centauros tenham sido formados nas partes mais internas do sistema solar. Eles teriam então sido colocados em suas posições atuais devido a troca de momento angular entre os planetas e planetésimos quando da migração dos planetas gigantes. A evolução se deu de tal forma que a passagem dos planetesimais e planetas por zonas de ressonância de movimento médio redefiniu as órbitas desses corpos \cite{Tsiganis2005}.\\
+\indent \indent O estudo de objetos como TNOs, Centauros e Satélites Irregulares (remanescentes relativamente inalterados da formação do sistema solar) nos ajudam a compreender a formação e evolução do Sistema Solar. Atualmente, é aceito que TNOs e Centauros tenham sido formados nas partes mais internas do sistema solar. Eles teriam então sido colocados em suas posições atuais devido a troca de momento angular entre os planetas e planetésimos quando da migração dos planetas gigantes. A evolução se deu de tal forma que a passagem dos planetesimais e planetas por zonas de ressonância de movimento médio redefiniu as órbitas desses corpos \citep{Tsiganis2005}.\\
 \indent Sabe-se que poucas sondas espaciais foram enviados para estudar o Sistema Solar Externo e que a quantidade de objetos estudados é muito pequena. Por isso, ainda hoje, as observações de solo tem se mostrado de grande importância.\\
 \indent Os sistemas de Júpiter e Saturno já foram pelas Voyager I e II, Galileu (Júpiter) e Cassini (Saturno), porém apenas Saturno continua sendo investigado por uma sonda. Porém as sondas observaram apenas os planetas, os anéis e satélites mais internos. Os satélites externos, que acredita-se ser oriundo de capturas ou foram pouco observados (como Phoebe) ou simplesmente não foram observados.\\
 \indent Já no caso de Urano e Netuno, nenhuma sonda exclusiva foi enviada, apenas as Voyagers I e II os visitaram, mas não permaneceram nos sistemas. A sonda New Horizons visitará Plutão em 2015 e obterá parâmetros físicos para Plutão e seus satélites (primeira visita por sonda a um satélite do cinturão de Kuiper), porém será uma passagem rápida e o acompanhamento da evolução do sistema, incluindo a evolução da atmosfera de Plutão se dará por observações de solo.\\
 \indent A quantidade de objetos descobertos além da órbita de Saturno tem aumentado muito desde o fim do século passado. Como são raras as oportunidades em que uma sonda se aproxima desses objetos, a obtenção de suas características físicas ficam a cargo de observações de solo ou de
 telescópios espaciais.\\
-\indent Um método que tem se mostrado eficiente para a obtenção desses parâmetros é o métodode ocultações estelares, que proporciona medidas tão precisas que são apenas superadas por
-medidas oriundas de sondas.
+\indent Um método que tem se mostrado eficiente para a obtenção desses parâmetros é o métodode ocultações estelares, que proporciona medidas tão precisas que são apenas superadas por medidas oriundas de sondas.
 
 \chapter{Ocultações}
 \label{Cap: observacoes}
@@ -111,6 +111,24 @@ medidas oriundas de sondas.
 
 \section{Ceres}
 \label{Sec: Ceres}
+
+\begin{figure}
+\begin{centering}
+\subfigure[Ocultação de 2010]{\includegraphics[scale=0.39]{figuras/Ceres_2010.eps}}
+\subfigure[Ocultação de 2013]{\includegraphics[scale=0.39]{figuras/Ceres_2013-zoom.eps}}
+\caption{Reconstrução pós-ocultação do caminho da sombra de Ceres na Terra para os eventos de 17 de Agosto de 2010 (a) e 25 de Outubro de 2013 (b). Os pontos em azul são os sítios que observaram os eventos. a) O ponto vermelho grande é a máxima aproximação geocêntrica às 22:40:25 UT. Os pequenos representam o centro da sombra separados por um minuto. b) Visão superior da ocultação sobre os sítios que observaram o evento. Os pontos vermelhos são os centros da sombra separados por 15 segundos. Nos dois eventos a sombra se move da esquerda pra direita.
+\label{Fig: Ceres-map}}
+\end{centering}
+\end{figure}
+
+\begin{figure}
+\begin{centering}
+\subfigure[Ocultação de 2010]{\includegraphics[angle=-90, scale=0.31]{figuras/Ceres_2010_sphere.eps} }
+\subfigure[Ocultação de 2013]{\includegraphics[scale=0.31]{figuras/Ceres_2013_sphere.pdf} }
+\caption{Melhores ajustes elípticos para as cordas das ocultações de 2010 e 2013. As setas indicam a direção de movimento, as linhas azuis são as cordas observadas, os segmentos vermelhos são as barras de erro dos ingressos, egressos e centro da ocultação em 1 $\sigma$.
+\label{Fig: Ceres-limb}}
+\end{centering}
+\end{figure}
 
 \section{Satélites Irregulares}
 \label{Sec: Irregulares}
