Comecado a escrever Ceres

--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -93,7 +93,7 @@
 \pagestyle{ruledheader}
 
 \chapter{Introdução}
-\label{Cap:intro}
+\label{Cap: intro}
 
 \indent \indent O estudo de objetos como TNOs, Centauros e Satélites Irregulares (remanescentes relativamente inalterados da formação do sistema solar) nos ajudam a compreender a formação e evolução do Sistema Solar. Atualmente, é aceito que TNOs e Centauros tenham sido formados nas partes mais internas do sistema solar. Eles teriam então sido colocados em suas posições atuais devido a troca de momento angular entre os planetas e planetésimos quando da migração dos planetas gigantes. A evolução se deu de tal forma que a passagem dos planetesimais e planetas por zonas de ressonância de movimento médio redefiniu as órbitas desses corpos \citep{Tsiganis2005}.\\
 \indent Sabe-se que poucas sondas espaciais foram enviados para estudar o Sistema Solar Externo e que a quantidade de objetos estudados é muito pequena. Por isso, ainda hoje, as observações de solo tem se mostrado de grande importância.\\
@@ -106,26 +106,26 @@ telescópios espaciais.\\
 \chapter{Ocultações}
 \label{Cap: observacoes}
 
-\section{TNOs}
-\label{Sec: TNOs}
-
 \section{Ceres}
 \label{Sec: Ceres}
 
+\indent \indent Apesar de Ceres não ser um objeto do sistema solar exterior, ele é o único planeta-anão no sistema solar interno e, por isso, é um objeto de grande importância e seu estudo pode ter grande impacto na formação e evolução do sistema solar. Na verdade, foi proposto que a origem de Ceres pode ser como um objeto transnetuniano \citep{McKinnon2012}, espalhado posteriormente para o cinturão principal de asteroides devido à migração dos planetas gigantes predito pelo Modelo de Nice \citep{Gomes2005}. Mesmo que ele tenha sido formado próximo à sua localização atual, a história dinâmica do sistema solar deve ter deixado sua assinatura em Ceres.\\
+\indent Contendo aproximadamente um quinto de toda a massa do cinturão de asteroides, espera-se que Ceres esteja em equilíbrio gravitacional e seja, portanto, um elipsóide Maclaurin ou Jacobi. De fato, observações diretas de Ceres com a utilização de ótica adaptativa indica que ele é um esferóide achatado nos pólos \citep{Drummond2014}. O conhecimento preciso de seu tamanho e forma é extrema importância para modelos de densidade, estrutura interna e diferenciação.
+
 \begin{figure}
 \begin{centering}
-\subfigure[Ocultação de 2010]{\includegraphics[scale=0.39]{figuras/Ceres_2010.eps}}
-\subfigure[Ocultação de 2013]{\includegraphics[scale=0.39]{figuras/Ceres_2013-zoom.eps}}
-\caption{Reconstrução pós-ocultação do caminho da sombra de Ceres na Terra para os eventos de 17 de Agosto de 2010 (a) e 25 de Outubro de 2013 (b). Os pontos em azul são os sítios que observaram os eventos. a) O ponto vermelho grande é a máxima aproximação geocêntrica às 22:40:25 UT. Os pequenos representam o centro da sombra separados por um minuto. b) Visão superior da ocultação sobre os sítios que observaram o evento. Os pontos vermelhos são os centros da sombra separados por 15 segundos. Nos dois eventos a sombra se move da esquerda pra direita.
+\subfigure[Ocultação de 2010]{\includegraphics[scale=0.39]{figuras/Ceres_2010.eps}\label{Fig: Ceres-map-2010}}
+\subfigure[Ocultação de 2013]{\includegraphics[scale=0.39]{figuras/Ceres_2013-zoom.eps}\label{Fig: Ceres-map-2013}}
+\caption{Reconstrução pós-ocultação do caminho da sombra de Ceres na Terra para os eventos de 17 de Agosto de 2010 (a) e 25 de Outubro de 2013 (b). Os pontos em azul são os sítios que observaram os eventos. a) O ponto grande vermelho é a máxima aproximação geocêntrica às 22:40:25 UT. Os pequenos representam o centro da sombra separados por um minuto. b) Visão superior da ocultação sobre os sítios que observaram o evento de 25 de Outubro de 2013. Os pontos vermelhos são os centros da sombra separados por 15 segundos. Nos dois eventos a sombra se move da esquerda pra direita.
 \label{Fig: Ceres-map}}
 \end{centering}
 \end{figure}
 
 \begin{figure}
 \begin{centering}
-\subfigure[Ocultação de 2010]{\includegraphics[angle=-90, scale=0.31]{figuras/Ceres_2010_sphere.eps} }
-\subfigure[Ocultação de 2013]{\includegraphics[scale=0.31]{figuras/Ceres_2013_sphere.pdf} }
-\caption{Melhores ajustes elípticos para as cordas das ocultações de 2010 e 2013. As setas indicam a direção de movimento, as linhas azuis são as cordas observadas, os segmentos vermelhos são as barras de erro dos ingressos, egressos e centro da ocultação em 1 $\sigma$.
+\subfigure[Ocultação de 2010]{\includegraphics[scale=0.35]{figuras/Ceres_2010_sphere.eps}\label{Fig: Ceres-limb-2010} }
+\subfigure[Ocultação de 2013]{\includegraphics[scale=0.35]{figuras/Ceres_2013_sphere.pdf}\label{Fig: Ceres-limb-2013} }
+\caption{Melhores ajustes elípticos para as cordas das ocultações de 2010 e 2013. As setas indicam a direção de movimento, as linhas azuis são as cordas observadas, os segmentos vermelhos são as barras de erro dos ingressos, egressos e centro da ocultação em $1\sigma$. A linha verde em (a) é uma corda negativa. Os instantes marcados em verde em (b) não foram utilizados para o ajuste como descrito no texto.
 \label{Fig: Ceres-limb}}
 \end{centering}
 \end{figure}
@@ -133,22 +133,11 @@ telescópios espaciais.\\
 \section{Satélites Irregulares}
 \label{Sec: Irregulares}
 
+\section{TNOs}
+\label{Sec: TNOs}
+
 \chapter{Astrometria de Netuno e Tritão}
 \label{Cap: Netuno}
-
-
-%\chapter{Resultados}
-%\label{Cap:resultados}
-%
-%
-%
-%\chapter{Discussão}%graf anom. verdad. e ceu(ind,media por noite)
-%%discussão sobre provável contribuição para melhorar elementos orbitais
-%\label{Cap:Analise}
-%
-%
-%\chapter{Conclusões}
-%\label{Cap:Conclusao}
 
 
 
