--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -1,3 +1,62 @@
+@Article{Tsiganis2005, 
+title={Origin of the orbital architecture of the giant planets of the Solar System},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03539},
+DOI={10.1038/nature03539},
+number={7041},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Tsiganis, K. and Gomes, R. and Morbidelli, A. and Levison, H. F.},
+year={2005},
+month={May},
+pages={459–461}
+}
+
+@Article{Gomes2005,
+title={Origin of the cataclysmic Late Heavy Bombardment period of the terrestrial planets},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03676},
+DOI={10.1038/nature03676},
+number={7041},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Gomes, R. and Levison, H. F. and Tsiganis, K. and Morbidelli, A.},
+year={2005},
+month={May},
+pages={466–469}}
+
+@InProceedings{McKinnon2012,
+author = {McKinnon, W. B.},
+title = {Where did Ceres accrete? },
+booktitle = {LPI Contributions},
+year = {2012},
+volume = {1667},
+number = {6475},
+}
+
+@Article{Drummond2014,
+title={Dwarf planet Ceres: Ellipsoid dimensions and rotational pole from Keck and VLT adaptive optics images},
+volume={236},
+url={http://dx.doi.org/10.1016/j.icarus.2014.03.038},
+DOI={10.1016/j.icarus.2014.03.038},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Drummond, J.D. and Carry, B. and Merline, W.J. and Dumas, C. and Hammel, H. and Erard, S. and Conrad, A. and Tamblyn, P. and Chapman, C.R.},
+year={2014},
+month={Jul},
+pages={28–37}}
+
+@Article{GomesJunior2015,
+author = {Gomes-Júnior, A. R. and others},
+title = {Results of two multi-chord stellar occultations by dwarf planet (1) Ceres},
+journal = {Monthly Notices},
+year = {2015},
+}
+
+
+
+
+
 @article{Stone1989,
 author = {Stone, Ronald C.},
 journal = {The Astronomical Journal},
@@ -122,29 +181,6 @@ year = {2007},
 volume = {133},
 pages = {1962-1976},
 month = {May},
-}
-
-@Article{Tsiganis2005, 
-title={Origin of the orbital architecture of the giant planets of the Solar System},
-volume={435},
-url={http://dx.doi.org/10.1038/nature03539}, DOI={10.1038/nature03539},
-number={7041},
-journal={Nature},
-publisher={Nature Publishing Group},
-author={Tsiganis, K. and Gomes, R. and Morbidelli, A. and Levison, H. F.},
-year={2005},
-month={May},
-pages={459–461}
-}
-
-@Article{Gomes2005,
-author = {R. Gomes and H. F. Levison and K. Tsiganis and A. Morbidelli},
-title = {Origin of the cataclysmic Late Heavy Bombardment period of the terrestrial planets},
-journal = {Nature},
-year = {2005},
-OPTvolume = {435},
-OPTnumber = {26},
-OPTpages = {466-469},
 }
 
 @Article{Clark2005,
