--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -1,3 +1,17 @@
+@Article{Millis1987,
+title={The size, shape, density, and Albedo of Ceres from its occultation of BD+8°471},
+volume={72},
+url={http://dx.doi.org/10.1016/0019-1035(87)90048-0},
+DOI={10.1016/0019-1035(87)90048-0},
+number={3},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Millis, R.L. and Wasserman, L.H. and Franz, O.G. and Nye, R.A. and Oliver, R.C. and Kreidl, T.J. and Jones, S.E. and Hubbard, W. and Lebofsky, L. and Goff, R. and et al.},
+year={1987},
+month={Dec},
+pages={507–518}
+}
+
 @Article{Tsiganis2005, 
 title={Origin of the orbital architecture of the giant planets of the Solar System},
 volume={435},
@@ -23,7 +37,8 @@ publisher={Nature Publishing Group},
 author={Gomes, R. and Levison, H. F. and Tsiganis, K. and Morbidelli, A.},
 year={2005},
 month={May},
-pages={466–469}}
+pages={466–469}
+}
 
 @InProceedings{McKinnon2012,
 author = {McKinnon, W. B.},
@@ -44,9 +59,17 @@ publisher={Elsevier BV},
 author={Drummond, J.D. and Carry, B. and Merline, W.J. and Dumas, C. and Hammel, H. and Erard, S. and Conrad, A. and Tamblyn, P. and Chapman, C.R.},
 year={2014},
 month={Jul},
-pages={28–37}}
+pages={28–37}
+}
 
-@Article{GomesJunior2015,
+@Article{Dunham2014,
+author = {Dunham D.W. and others},
+year = {2014},
+journal = {Asteroid Occultations V12.0. EAR-A-3-RDR-OCCULTATIONS-V12.0. NASA Planetary Data System},
+url = {http://sbn.psi.edu/pds/resource/occ.html},
+}
+
+@Article{GomesJunior2015-Ceres,
 author = {Gomes-Júnior, A. R. and others},
 title = {Results of two multi-chord stellar occultations by dwarf planet (1) Ceres},
 journal = {Monthly Notices},
