--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -40,13 +40,62 @@ month={May},
 pages={466–469}
 }
 
+@Article{Widemann2009,
+title={Titania’s radius and an upper limit on its atmosphere from the September 8, 2001 stellar occultation},
+volume={199},
+url={http://dx.doi.org/10.1016/j.icarus.2008.09.011},
+DOI={10.1016/j.icarus.2008.09.011},
+number={2},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Widemann, T. and Sicardy, B. and Dusser, R. and Martinez, C. and Beisker, W. and Bredner, E. and Dunham, D. and Maley, P. and Lellouch, E. and Arlot, J.-E. and et al.},
+year={2009},
+month={Feb},
+pages={458–476}
+}
+
+@InProceedings{Assafin2011,
+author = {Assafin, M and others},
+booktitle = {Gaia follow-up network for the solar system objects: Gaia FUN-SSO workshop proceedings. IMCCE-Paris Observatory, Paris},
+year = {2011},
+page = {85},
+}
+
 @InProceedings{McKinnon2012,
 author = {McKinnon, W. B.},
 title = {Where did Ceres accrete? },
-booktitle = {LPI Contributions},
+booktitle = {LPI Contrib},
 year = {2012},
 volume = {1667},
 number = {6475},
+}
+
+@Article{Zacharias2013,
+title={THE FOURTH US NAVAL OBSERVATORY CCD ASTROGRAPH CATALOG (UCAC4)},
+volume={145},
+url={http://dx.doi.org/10.1088/0004-6256/145/2/44},
+DOI={10.1088/0004-6256/145/2/44},
+number={2},
+journal={The Astronomical Journal},
+publisher={IOP Publishing},
+author={Zacharias, N. and Finch, C. T. and Girard, T. M. and Henden, A. and Bartlett, J. L. and Monet, D. G. and Zacharias, M. I.},
+year={2013},
+month={Jan},
+pages={44}
+}
+
+@Article{Braga-Ribas2013,
+title={THE SIZE, SHAPE, ALBEDO, DENSITY, AND ATMOSPHERIC LIMIT OF TRANSNEPTUNIAN OBJECT (50000) QUAOAR FROM MULTI-CHORD STELLAR OCCULTATIONS},
+volume={773},
+url={http://dx.doi.org/10.1088/0004-637X/773/1/26},
+DOI={10.1088/0004-637x/773/1/26},
+number={1},
+journal={ApJ},
+publisher={IOP Publishing},
+author={Braga-Ribas, F. and Sicardy, B. and Ortiz, J. L. and Lellouch, E. and Tancredi, G. and Lecacheux, J. and Vieira-Martins, R. and Camargo, J. I. B. and Assafin, M. and Behrend, R. and et al.},
+year={2013},
+month={Jul},
+pages={26}
 }
 
 @Article{Drummond2014,
