--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -54,6 +54,20 @@ month={Feb},
 pages={458–476}
 }
 
+@Article{Sicardy2011,
+title={A Pluto-like radius and a high albedo for the dwarf planet Eris from an occultation},
+volume={478},
+url={http://dx.doi.org/10.1038/nature10550},
+DOI={10.1038/nature10550},
+number={7370},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Sicardy, B. and Ortiz, J. L. and Assafin, M. and Jehin, E. and Maury, A. and Lellouch, E. and Hutton, R. Gil and Braga-Ribas, F. and Colas, F. and Hestroffer, D. and et al.},
+year={2011},
+month={Oct},
+pages={493–496}
+}
+
 @InProceedings{Assafin2011,
 author = {Assafin, M and others},
 booktitle = {Gaia follow-up network for the solar system objects: Gaia FUN-SSO workshop proceedings. IMCCE-Paris Observatory, Paris},
@@ -139,6 +153,7 @@ volume = {97},
 year = {1989},
 address= {U. S. Naval Observatory, Washington}
 }
+
 @article{Assafin1997,
 author = {Assafin, M. and Vieira Martins, R. and Andrei, A. H.},
 title = {A Method to Improve Guide Star Catalogue Positions with Astrometric Catalogues},
@@ -147,6 +162,7 @@ pages = {1451},
 volume = {113},
 year = {1997}
 }
+
 @article{Tody1993,
 author = {Tody, D.},
 journal = {ASP Conf. Ser.},
@@ -155,6 +171,7 @@ title = {IRAF in the Nineties, in Astronomical Data Analysis Software and System
 volume = {52},
 year = {1993}
 }
+
 @Book{Bevington1969,
 author = {Bevington, P. R.},
 title = {Data Reduction and Error Analysis for the Physical Sciences},
@@ -162,6 +179,7 @@ year = {1969},
 publisher = {McGraw-Hill Science},
 address = {New York}
 }
+
 @article{UCAC2,
 author = {Zacharias, N. and others},
 journal = {Astronomical Journal},
@@ -171,19 +189,22 @@ year = {2004},
 volume = {127},
 pages = {3043}
 }
+
 @article{NLTT,
 author = {Luyten, W. J. },
 title = {New Luyten Catalogue of Stars with Proper Motions Larger than Two Tenths of an Arcsecond},
 year = {1979},
 address={Minneapolis:  University of Minnesota}
 }
+
 @article{Morbidelli2005,
 author = {Morbidelli, A. and H. F. Levison and K. Tsiganis and R. Gomes},
 title = {The chaotic capture of Jovian Trojan asteroids during the early dynamical evolution of the Solar System},
 journal = {Nature},
 year = {2005},
 volume = {435},
-pages = {462-466}
+pages = 
+{462-466}
 }
 @book{Kovalevsky1995,
 author = {Kovalevsky, J.},
@@ -192,6 +213,7 @@ title = {Modern Astrometry},
 year = {1995},
 address = {Berlim, Heidelberg}
 }
+
 @article{Scott2003,
 author = {Scott S. Sheppard and David C. Jewitt},
 title = {An abundant population of small irregular satellites around Jupiter},
@@ -200,6 +222,7 @@ year = {2003},
 volume = {423},
 pages = {261-263}
 }
+
 @article{Scott2006,
 author = {Scott S. Sheppard},
 title = {Outer Irregular Satellites of the planets and their relationship with asteroids, comets and Kuiper Belt objects},
@@ -207,14 +230,6 @@ journal = {Proceedings IAU Symposium},
 year = {2006},
 volume = {229},
 pages = {319-334}
-}
-@article{UCAC4-2012,
-author = {Zacharias, N. and others},
-title = {The Fourth US Naval Observatory CCD Astrograph Catalog (UCAC4)},
-journal = {The Astronomical Journal},
-year = {2013},
-volume = {145},
-pages = {14}
 }
 
 @Article{Nesvorny2003,
@@ -263,15 +278,6 @@ year = {2005},
 volume = {435},
 number = {5},
 pages = {66-69},
-}
-
-@Article{Sicardy2011,
-author = {Bruno Sicardy and others},
-title = {A Pluto-like radius and a high albedo for the dwarf planet Eris from an occultation},
-journal = {Nature},
-year = {2011},
-volume = {478},
-pages = {493-496},
 }
 
 @Article{Desmars2013,
