--- a/Irregulares/corecoes/26273_corr/26273_ja.tex
+++ b/Irregulares/corecoes/26273_corr/26273_ja.tex
@@ -50,7 +50,7 @@
 \let\hyper@linkend\@empty\citeyear[#1][#2]{#3}}}
 \makeatother
 \titlerunning{Astrometric Positions of the Irregular Satellites of Giant Planets}
-\authorrunning{Gomes-Júniot et al.}
+\authorrunning{Gomes-Júnior et al.}
 
 \makeatother
 
